unpackaged/main/default/objects/Contact/fields/RICSC_AuthorisationGroup__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AuthorisationGroup__c</fullName>
        <description>Authorization group retrieved from the source system</description>
        <label>Authorisation Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_SAPAuthorisationGroup</valueSetName>
        </valueSet>
    </CustomField>