unpackaged/main/default/objects/Contact/fields/RICSC_Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Boutique</description>
        <label>Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Boutique</relationshipLabel>
        <relationshipName>RICSC_ContactsBoutique</relationshipName>
        <type>Lookup</type>
    </CustomField>