unpackaged/main/default/objects/Contact/fields/RICSC_CountryOfOrigin__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryOfOrigin__c</fullName>
        <description>Country where the record has been created. Used for the sharing rules (e.g. records created outside of China shouldn't be visible for the Chineese users) - Release 1 SC</description>
        <label>Sales Associate Country Of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Country</valueSetName>
        </valueSet>
    </CustomField>