unpackaged/main/default/objects/Contact/fields/RICSC_ExtCreationDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExtCreationDate__c</fullName>
        <description>Date of the record creation in the source system</description>
        <label>Ext Creation Date SA</label>
        <type>Date</type>
    </CustomField>