unpackaged/main/default/objects/Contact/fields/RICSC_Maison__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Maison__c</fullName>
        <description>List of Maisons</description>
        <label>Sales Associate Maison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Maison</valueSetName>
        </valueSet>
    </CustomField>