unpackaged/main/default/objects/Contact/recordTypes/Contact.recordType-meta.xml
<RecordType>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </RecordType>